# Zephyr

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  astrafox.server.yaml  docker-compose.yml  pyproject.toml  requirements.txt  zephyr.server.yaml
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py  dev_agent.py  user_agent.py
agents/prompts/: dev_audit.md  dev_debug.md  dev_system.md  user_guide.md  user_onboard.md  user_system.md
api/: server.py
api/models/: requests.py  responses.py
api/routes/: analyze.py  ci.py  compliance.py  debug.py  guide.py  reports.py  widget.py
api/websocket/: chat_ws.py
astrafox_ui/: index.html  package.json  tailwind.config.js  vite.config.js
astrafox_ui/src/: App.vue
config/: __init__.py  llm_config.py  logging_config.py  providers.py  settings.py
core/: __init__.py  browser_engine.py  console_capture.py  dom_extractor.py  interaction_runner.py  perf_analyzer.py  rgaa_auditor.py  rgpd_auditor.py  screenshot_manager.py  visual_diff.py
mcp_server/: __main__.py  requirements.txt  server.py
orchestrator/: __init__.py  context_builder.py  prompt_engine.py  router.py  session_manager.py
sdk/: README.md  astrafox-widget.js  index.d.ts  package.json  zephyr-widget.js
sdk/react/: index.d.ts  index.jsx
sdk/vue/: AstrafoxWidget.vue  ZephyrWidget.vue
tests/: conftest.py  test_agents.py  test_api.py  test_ci.py  test_compliance.py  test_core.py  test_orchestrator.py  test_security.py  test_validation.py
zephyr_ui/: index.html  package.json  tailwind.config.js
zephyr_ui/src/: App.vue  router.js
(+16 files in other folders)
