[project]
name = "zephyr-intelligence"
version = "0.3.1"
description = "Universal UI Intelligence Platform"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["."]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function call in argument defaults
    "B904",  # raise from in except
    "SIM108", # ternary operator
    "RUF001", # Unicode ambiguous characters
]

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "agents", "orchestrator", "api", "mcp_server"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
